[gd_scene load_steps=10 format=3 uid="uid://b07xox2y14wss"]

[ext_resource type="Script" path="res://script/main.gd" id="1_00oj4"]
[ext_resource type="Texture2D" uid="uid://briet6go52trq" path="res://icon.svg" id="1_drv7a"]
[ext_resource type="Script" path="res://script/player.gd" id="1_on31g"]
[ext_resource type="Resource" uid="uid://cms5h73hluo1u" path="res://resource/default_game_state.tres" id="2_spqmx"]
[ext_resource type="Script" path="res://script/obstacle_spawner.gd" id="4_cnqv3"]
[ext_resource type="PackedScene" uid="uid://34hd4idevgqb" path="res://scene/game_over.tscn" id="4_g5u6w"]
[ext_resource type="PackedScene" uid="uid://bouu3jidyqm5a" path="res://scene/pause_screen.tscn" id="6_li3ib"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fot1o"]
size = Vector2(38, 38)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_2jdty"]

[node name="Main" type="Node2D"]
script = ExtResource("1_00oj4")
game_state = ExtResource("2_spqmx")

[node name="Player" type="CharacterBody2D" parent="."]
collision_mask = 6
script = ExtResource("1_on31g")

[node name="Icon" type="Sprite2D" parent="Player"]
scale = Vector2(0.3, 0.3)
texture = ExtResource("1_drv7a")

[node name="Collider" type="CollisionShape2D" parent="Player"]
shape = SubResource("RectangleShape2D_fot1o")

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2(597, 481)
collision_layer = 4
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
shape = SubResource("WorldBoundaryShape2D_2jdty")

[node name="ScoreTick" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -46.0
offset_bottom = 23.0
grow_horizontal = 0
text = "00000"
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="GameOver" parent="CanvasLayer" instance=ExtResource("4_g5u6w")]
metadata/_edit_use_anchors_ = true

[node name="PauseScreen" parent="CanvasLayer" instance=ExtResource("6_li3ib")]
unique_name_in_owner = true

[node name="ObstacleSpawner" type="Marker2D" parent="."]
position = Vector2(1307, 480)
gizmo_extents = 30.0
script = ExtResource("4_cnqv3")

[node name="ObstacleTimer" type="Timer" parent="ObstacleSpawner"]

[connection signal="timeout" from="ScoreTick" to="." method="_on_score_tick_timeout"]
[connection signal="obstacle_collided" from="ObstacleSpawner" to="." method="_on_obstacle_collided"]
[connection signal="speed_requested" from="ObstacleSpawner" to="." method="_on_speed_requested"]
[connection signal="timeout" from="ObstacleSpawner/ObstacleTimer" to="ObstacleSpawner" method="_on_obstacle_timer_timeout"]
